<resources>
    <string name="app_name">Finances App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_income_expense_fab">Add new income or expense fab</string>
    <string name="add_expense_fab">Add expense fab</string>
    <string name="add_income_fab">Add income fab</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="paid">Paid</string>
    <string name="received">Received</string>
    <string name="select_date">Select Date</string>
    <string name="error_inserting_income">Error while trying to insert Income</string>
    <string name="error_updating_income">Error while trying to update Income</string>
    <string name="error_fill_required_fields">Fill the required fields</string>
    <string name="success_inserting_income">Success inserting the Income</string>
    <string name="success_updating_income">Success updating Income</string>
    <string name="error_inserting_expense">Error while inserting Expense</string>
    <string name="error_updating_expense">Error while updating Expense</string>
    <string name="success_inserting_expense">Success inserting the Expense</string>
    <string name="success_updating_expense">Success updating Expense</string>
    <string name="account_balance">Account balance</string>
    <string name="sign_money">$ %s</string>
</resources>