<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jonas.financesapp.ui.dashboard.DashboardViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabIncomeExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_income_expense_fab"
            android:focusable="true"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/keyline"
            android:clickable="true"
            android:contentDescription="@string/add_expense_fab"
            android:focusable="true"
            android:src="@drawable/ic_arrow_downward"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fabIncomeExpense"
            app:layout_constraintEnd_toEndOf="@+id/fabIncomeExpense"
            app:tint="@color/white"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/keyline"
            android:clickable="true"
            android:contentDescription="@string/add_income_fab"
            android:focusable="true"
            android:src="@drawable/ic_arrow_upward"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fabExpense"
            app:layout_constraintEnd_toEndOf="@+id/fabExpense"
            app:tint="@color/white"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>